# AdvancedNodeEditor

./: .gitignore  CMakeLists.txt  CppProjectMapper.ps1  Readme.md  main.cpp
AdvancedNodeEditor/: ANETypes.h  AdvancedNodeEditor.cpp  AdvancedNodeEditor.h  Conversions.cpp  Conversions.h  CoreTypes.h  INodeEditorController.h  NodeComponents.cpp  NodeComponents.h  NodeEditor.cpp  NodeEditor.h  NodeEditorAPI.cpp  NodeEditorAPI.h  NodeEditorConnections.cpp  NodeEditorController.cpp  NodeEditorController.h  NodeEditorDrawConnections.cpp  NodeEditorDrawGroups.cpp  NodeEditorDrawNodes.cpp  NodeEditorDrawing.cpp  NodeEditorEvaluation.cpp  NodeEditorEvaluation.h  NodeEditorGroups.cpp  NodeEditorInteractions.cpp  NodeEditorModel.cpp  NodeEditorModel.h  NodeEditorOperations.cpp  NodeEditorRendering.cpp  NodeEditorState.cpp  NodeEditorSubgraphs.cpp  NodeEditorUtilities.cpp  NodeEditorView.cpp  NodeEditorView.h  PublicAPI.cpp  StyleDefinitions.cpp  StyleDefinitions.h
AdvancedNodeEditor/API/: PublicAPI.cpp
AdvancedNodeEditor/Components/Connection/: NodeEditorConnections.cpp
AdvancedNodeEditor/Components/Group/: NodeEditorGroups.cpp
AdvancedNodeEditor/Components/Node/: NodeComponents.cpp  NodeComponents.h  NodeEditorComponents.cpp
AdvancedNodeEditor/Components/Subgraph/: NodeEditorSubgraphs.cpp
AdvancedNodeEditor/Components/UUID/: NodeEditorUuidOperations.cpp
AdvancedNodeEditor/Components/Utils/: NodeEditorUtilities.cpp
AdvancedNodeEditor/Core/: NodeEditor.cpp  NodeEditor.h
AdvancedNodeEditor/Core/Conversions/: Conversions.cpp  Conversions.h
AdvancedNodeEditor/Core/Style/: ConnectionStyleManager.cpp  ConnectionStyleManager.h  InteractionMode.h  StyleDefinitions.cpp  StyleDefinitions.h
AdvancedNodeEditor/Core/Types/: CoreTypes.h  SerializedTypes.h  UuidTypes.h
AdvancedNodeEditor/Editor/Controller/: INodeEditorController.h  NodeEditorController.cpp  NodeEditorController.h
AdvancedNodeEditor/Editor/Model/: NodeEditorModel.cpp  NodeEditorModel.h
AdvancedNodeEditor/Editor/Operations/: NodeEditorInteractions.cpp  NodeEditorOperations.cpp  NodeEditorState.cpp
AdvancedNodeEditor/Editor/View/: GraphTitleManager.cpp  GraphTitleManager.h  MinimapManager.cpp  MinimapManager.h  NodeBoundingBoxManager.cpp  NodeBoundingBoxManager.h  NodeEditorView.cpp  NodeEditorView.h  ViewManager.cpp  ViewManager.h
AdvancedNodeEditor/Evaluation/: NodeEditorEvaluation.cpp  NodeEditorEvaluation.h  NodeEvaluator.h
AdvancedNodeEditor/Rendering/: NodeEditorAnimationManager.cpp  NodeEditorAnimationManager.h  NodeEditorDrawConnections.cpp  NodeEditorDrawGroups.cpp  NodeEditorDrawNodes.cpp  NodeEditorDrawReroutes.cpp  NodeEditorDrawing.cpp  NodeEditorRendering.cpp  NodeEditorUtilities.cpp
AdvancedNodeEditor/Utils/: CommandDefinitions.h  CommandManager.cpp  CommandManager.h  CommandRouter.cpp  CommandRouter.h  TypedCommandRouter.h  UuidGenerator.h
exemple/: main_exemple.cpp
tests/components/: ConnectionTests.cpp  GroupTests.cpp  NodeComponentsTests.cpp  SubgraphTests.cpp
tests/core/: CommandManagerTests.cpp  CommandRouterTests.cpp  ConversionsTests.cpp  NodeEditorTests.cpp  TypedCommandRouterTests.cpp  UuidGeneratorTests.cpp
tests/editor/: ControllerTests.cpp  ModelTests.cpp  ViewTests.cpp
tests/evaluation/: EvaluationDebug_Tests.cpp  EvaluationTests.cpp
